src/components/sbb-button/sbb-button.scss
/* ... */
:host([variant='transparent'][negative]) {
  --sbb-button-color-active-background: var(--sbb-color-iron-default);
  --sbb-button-color-active-border: var(--sbb-color-iron-default);
  --sbb-button-color-active-text: var(--sbb-color-white-default);
  --sbb-button-color-default-background: transparent;
  --sbb-button-color-default-border: transparent;
  --sbb-button-color-default-text: var(--sbb-color-white-default);
  --sbb-button-color-disabled-background: transparent;
  --sbb-button-color-disabled-border: transparent;
  --sbb-button-color-disabled-text: var(--sbb-color-granite-default);
  --sbb-button-color-hover-background: var(--sbb-color-charcoal-default);
  --sbb-button-color-hover-border: var(--sbb-color-charcoal-default);
  --sbb-button-color-hover-text: var(--sbb-color-white-default);
}

:host([size='m']) {
  --sbb-button-border-width: var(--sbb-border-width-1x);
  --sbb-button-min-height: var(--sbb-size-button-m-min-height);
  --sbb-button-padding-inline: var(--sbb-spacing-fixed-5x);

  @include mq($from: medium) {
    --sbb-button-padding-inline: var(--sbb-spacing-fixed-8x);
  }
}

.sbb-button {
  @include buttonReset;
  @include stretch(width);
  @include text-xs--bold;
  @include fontSmoothing;

  pointer-events: auto;

  // Reset for link variant
  text-decoration: none;
  position: relative;
  display: flex;
  gap: var(--sbb-button-gap);
  align-items: center;
  justify-content: center;
  text-align: left;
  transition-duration: var(--sbb-button-transition-duration);
  transition-timing-function: var(--sbb-button-transition-easing-function);
  transition-property: color;
  min-height: var(--sbb-button-min-height);
  border-radius: var(--sbb-button-border-radius);

  // The padding block value is only a minimal padding to preserve a padding if the content becomes larger than intended.
  // Positioning of the content is made by flexbox vertical centering.
  // The real padding displayed is larger than the defined value below.
  padding-block: var(--sbb-button-padding-block-min);
  padding-inline: var(--sbb-button-padding-inline);
  color: var(--sbb-button-color-default-text);
  cursor: pointer;

  // Renders background and border in the background absolute to enable the hover animation
  &::before {
    position: absolute;
    content: '';
    inset: 0;
    border: var(--sbb-button-border-width) solid var(--sbb-button-color-default-border);
    border-radius: var(--sbb-button-border-radius);
    background-color: var(--sbb-button-color-default-background);
    transition-duration: var(--sbb-button-transition-duration);
    transition-timing-function: var(--sbb-button-transition-easing-function);
    transition-property: inset, background-color, border-color, box-shadow;

    @include ifForcedColors {
      border: #{px-to-rem-build(1)} solid windowText;
    }
  }

  &:focus-visible::before {
    @include focusOutline;
  }

  // If the the device can hover over elements with ease
  @include hover-mq($hover: true) {
    // stylelint-disable plugin/stylelint-bem-namics
    :host(:not([disabled])) &:hover {
      --sbb-button-translate-y-content-hover: #{px-to-rem-build(-1)};
      --sbb-button-shadow-1-offset-y: calc(
        0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
      );
      --sbb-button-shadow-1-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-blur));
      --sbb-button-shadow-2-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-2-blur));

      color: var(--sbb-button-color-hover-text);

      &::before {
        inset: calc(var(--sbb-button-border-width) * -1);
        background-color: var(--sbb-button-color-hover-background);
        border-color: var(--sbb-button-color-hover-border);

        @include ifForcedColors {
          border-color: Highlight;
        }
      }
    }
    // stylelint-enable plugin/stylelint-bem-namics
  }

  :host([disabled]) & {
    color: var(--sbb-button-color-disabled-text);
    cursor: default;
    pointer-events: none;

    &::before {
      background-color: var(--sbb-button-color-disabled-background);
      border-color: var(--sbb-button-color-disabled-border);
    }

    // Line through content
    &::after {
      content: '';
      @include absoluteCenterY;

      background-color: var(--sbb-button-color-disabled-text);
      height: var(--sbb-button-disabled-line-through-height);
      inset-inline: var(--sbb-button-padding-inline);

      @include ifForcedColors {
        background-color: GrayText;
      }
    }
  }

  // stylelint-disable plugin/stylelint-bem-namics
  :host(:not([disabled])) &:active::before {
    color: var(--sbb-button-color-active-text);
    background-color: var(--sbb-button-color-active-background);
    border-color: var(--sbb-button-color-active-border);
  }
  // stylelint-enable plugin/stylelint-bem-namics

  // Only apply shadow definitions where it is really used.
  // stylelint-disable plugin/stylelint-bem-namics
  :host([variant='primary']:not([disabled])) &,
  :host([variant='secondary']:not([negative], [disabled])) & {
    &:not(:active)::before {
      box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
          var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
          var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-button-shadow-2-color),
        var(--sbb-shadow-elevation-level-3-shadow-1-offset-x) var(--sbb-button-shadow-1-offset-y)
          var(--sbb-button-shadow-1-blur) var(--sbb-shadow-elevation-level-3-shadow-1-spread)
          var(--sbb-button-shadow-1-color);
    }
  }
  // stylelint-enable plugin/stylelint-bem-namics
}

:host([static]) {
  user-select: none;
}

.sbb-button--icon-only {
  --sbb-button-padding-inline: 0;
  --icon-margin-inline-end: 0;

  width: var(--sbb-button-min-height);
  justify-content: center;

  :host([disabled]) &::after {
    inset-inline: unset;

    // Width of line through is fixed in icon variant
    width: var(--sbb-button-icon-size);
  }
}
/* ... */

